fix: horizontal scroll

--- a/css/style.css
+++ b/css/style.css
@@ -113,6 +113,7 @@ body {
 }
 .wrapper {
   flex-direction: column;
+  overflow: hidden;
 }
 [class*="_container"] {
   margin: 0 auto;
